examples/test/testpolicy13293.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13293
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key2: value33
      key1: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value1
          key26: value9
      podSelector:
        matchLabels:
          key49: value22
          key25: value14
